--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,16 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    
+    <script src="https://kit.fontawesome.com/0a0e2ca20c.js" crossorigin="anonymous"></script>
+    <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
 
     <title>Alexandre Betioli - Impressão 3D</title>
-
     
     <!-- Google Tag Manager -->
-    <!--
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -32,7 +33,6 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-WM34VXX");
     </script>
-    -->
     <!-- End Google Tag Manager -->
   </head>
   <body>
@@ -41,7 +41,6 @@
     <div id="root"></div>
 
     <!-- Google Tag Manager (noscript) -->
-    <!--
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-WM34VXX"
@@ -50,7 +49,6 @@
         style="display: none; visibility: hidden;"
       ></iframe
     ></noscript>
-    -->
     <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
