--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    
     <div id="root"></div>
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v7.0"></script>
+    
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
